modularized current code

--- a/CLibJMTP/CLibJMTP/CLibJMTP.vcxproj
+++ b/CLibJMTP/CLibJMTP/CLibJMTP.vcxproj
@@ -121,9 +121,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\..\jMTP\bin\org_meltzg_jmtp_JMTP.h" />
-    <ClInclude Include="libJMTPHelpers.h" />
+    <ClInclude Include="jniHelpers.h" />
+    <ClInclude Include="mtpHelpers.h" />
+    <ClInclude Include="mtpModels.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="jniHelpers.cpp" />
+    <ClCompile Include="mtpHelpers.cpp" />
+    <ClCompile Include="mtpModels.cpp" />
     <ClCompile Include="org_meltzg_jmtp_JMTP.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
