--- a/CLibJMTP/CLibJMTP/CLibJMTP.vcxproj
+++ b/CLibJMTP/CLibJMTP/CLibJMTP.vcxproj
@@ -39,7 +39,7 @@
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
@@ -127,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="jniHelpers.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="mtpHelpers.cpp" />
     <ClCompile Include="mtpModels.cpp" />
     <ClCompile Include="org_meltzg_jmtp_JMTP.cpp" />
