--- a/CLibJMTP/CLibJMTP/CLibJMTP.vcxproj.filters
+++ b/CLibJMTP/CLibJMTP/CLibJMTP.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="mtpModels.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="commonHelpers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="org_meltzg_jmtp_JMTP.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="commonHelpers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
