--- a/CLibJMTP/CLibJMTP/CLibJMTP.vcxproj
+++ b/CLibJMTP/CLibJMTP/CLibJMTP.vcxproj
@@ -121,7 +121,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\jMTP\bin\org_meltzg_jmtp_JMTP.h" />
+    <ClInclude Include="..\..\jMTP\bin\org_meltzg_jmlm_device_access_MTPContentInterface.h" />
     <ClInclude Include="commonHelpers.h" />
     <ClInclude Include="jniHelpers.h" />
     <ClInclude Include="mtpHelpers.h" />
@@ -133,7 +133,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mtpHelpers.cpp" />
     <ClCompile Include="mtpModels.cpp" />
-    <ClCompile Include="org_meltzg_jmtp_JMTP.cpp" />
+    <ClCompile Include="org_meltzg_jmlm_device_access_MTPContentInterface.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
