--- a/JMLM/build.gradle
+++ b/JMLM/build.gradle
@@ -14,11 +14,17 @@ repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    mavenCentral()
+    maven {
+        url 'https://dl.bintray.com/ijabz/maven'
+    }
 }
 
 dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+
+    compile group:'net.jthink', name:'jaudiotagger', version:'2.2.5'
 }
 
 task makeBinDir() {
