changing move signature

--- a/JMLM/src/test/resources/test-props.properties
+++ b/JMLM/src/test/resources/test-props.properties
@@ -1,10 +1,10 @@
-test.file=C:/Users/vader/Desktop/Monomer - Labyrinth - 04 Labyrinth.flac
+test.file=D:/Users/vader/Desktop/Monomer - Labyrinth - 04 Labyrinth.flac
 test.file.trans.to.1=this/is/a/test1.flac
 test.file.trans.to.2=this/is/a/test2.flac
-test.file.trans.from.1=C:/Users/vader/Desktop/test/transfer1.mp3
-test.file.trans.from.2=C:/Users/vader/Desktop/test/transfer2.mp3
+test.file.trans.from.1=D:/Users/vader/Desktop/test/transfer1.mp3
+test.file.trans.from.2=D:/Users/vader/Desktop/test/transfer2.mp3
 device.mtp.id=\\\\?\\usb#vid_4102&pid_1191#ak100_ii#{6ac27878-a6fa-4155-ba85-f98f491d4f33}
 device.mtp.lib1=o2
 device.mtp.lib2=o9301
-device.fsa.lib1=C:/Users/vader/Music
-device.fsa.lib2=C:/Users/vader/Music2
+device.fsa.lib1=D:/Users/vader/Music
+device.fsa.lib2=D:/Users/vader/Music2
