added stubs for other tests and added an org.meltzg package

--- a/src/test/resources/test-props.properties
+++ b/src/test/resources/test-props.properties
@@ -1,7 +1,7 @@
-test.fsacn.file=D:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/04 - Doves.flac
-test.fsacn.dir=D:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/
-test.fsacn.invfile=D:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/Future Islands - Singles.log
-test.fsacn.nonexist=D:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/asdf
+test.fsacn.file=C:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/04 - Doves.flac
+test.fsacn.dir=C:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/
+test.fsacn.invfile=C:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/Future Islands - Singles.log
+test.fsacn.nonexist=C:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/asdf
 test.fsacn.genre=Indie
 test.fsacn.artist=Future Islands
 test.fsacn.album=Singles
