--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ repositories {
 }
 
 dependencies {
+
+    testCompile "org.mockito:mockito-core:2.+"
+    
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 
