--- a/src/test/resources/test-props.properties
+++ b/src/test/resources/test-props.properties
@@ -1,10 +1,14 @@
-test.fsacn.file=C:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/04 - Doves.flac
-test.fsacn.dir=C:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/
-test.fsacn.invfile=C:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/Future Islands - Singles.log
-test.fsacn.nonexist=C:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/asdf
+test.fsacn.file=D:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/04 - Doves.flac
+test.fsacn.dir=D:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/
+test.fsacn.invfile=D:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/Future Islands - Singles.log
+test.fsacn.nonexist=D:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/asdf
 test.fsacn.genre=Indie
 test.fsacn.artist=Future Islands
 test.fsacn.album=Singles
 test.fsacn.title=Doves
 test.fsacn.discnum=1
 test.fsacn.tracknum=4
+
+test.fsacd.lib1=D:/Users/vader/Music
+test.fsacd.lib2=D:/Users/vader/Music2
+test.fsacd.child=D:/Users/vader/Music/Future Islands
