- Refactored validation to return ID and throw custom exception - implemened CRUD ops for fsa device - added unit tests - made child manipulation more secure - added ability to update content root info for a single node

--- a/build.gradle
+++ b/build.gradle
@@ -31,3 +31,4 @@ dependencies {
     compile group:'net.jthink', name:'jaudiotagger', version:'2.2.5'
 }
 
+defaultTasks 'clean', 'build', 'jacocoTestReport'
