--- a/src/test/resources/test-props.properties
+++ b/src/test/resources/test-props.properties
@@ -12,3 +12,8 @@ test.fsacn.tracknum=4
 test.fsacd.lib1=D:/Users/vader/Music
 test.fsacd.lib2=D:/Users/vader/Music2
 test.fsacd.child=D:/Users/vader/Music/Future Islands
+test.fsacd.file1=D:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/04 - Doves.flac
+test.fsacd.file2=D:/Users/vader/Music/Monomer/Monomer - Labyrinth/Monomer - Labyrinth - 03 Warden.flac
+test.fsacd.path1=/this/is/a/test1
+test.fsacd.path2=/this/is/a/test2
+
