--- a/src/main/cpp/CLibJMTP/CLibJMTP/CLibJMTP.vcxproj.filters
+++ b/src/main/cpp/CLibJMTP/CLibJMTP/CLibJMTP.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="..\..\include\mtpModels.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\jniHelpers.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
