--- a/src/main/cpp/CLibJMTP/CLibJMTP/CLibJMTP.vcxproj.filters
+++ b/src/main/cpp/CLibJMTP/CLibJMTP/CLibJMTP.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="..\..\src\mtpHelpers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\jniHelpers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\mtpHelpers.h">
@@ -30,7 +33,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\jniHelpers.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
