--- a/src/test/resources/test-props.properties
+++ b/src/test/resources/test-props.properties
@@ -1,7 +1,7 @@
-test.fsacn.file=C:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/04 - Doves.flac
-test.fsacn.dir=C:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/
-test.fsacn.invfile=C:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/Future Islands - Singles.log
-test.fsacn.nonexist=C:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/asdf
+test.fsacn.file=D:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/04 - Doves.flac
+test.fsacn.dir=D:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/
+test.fsacn.invfile=D:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/Future Islands - Singles.log
+test.fsacn.nonexist=D:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/asdf
 test.fsacn.genre=Indie
 test.fsacn.artist=Future Islands
 test.fsacn.album=Singles
@@ -9,11 +9,23 @@ test.fsacn.title=Doves
 test.fsacn.discnum=1
 test.fsacn.tracknum=4
 
-test.fsacd.lib1=C:/Users/vader/Music
-test.fsacd.lib2=C:/Users/vader/Music2
-test.fsacd.child=C:/Users/vader/Music/Future Islands
-test.fsacd.file1=C:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/04 - Doves.flac
-test.fsacd.file2=C:/Users/vader/Music/Monomer/Monomer - Labyrinth/Monomer - Labyrinth - 03 Warden.flac
+test.fsacd.lib1=D:/Users/vader/Music
+test.fsacd.lib2=D:/Users/vader/Music2
+test.fsacd.child=D:/Users/vader/Music/Future Islands
+test.fsacd.file1=D:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/04 - Doves.flac
+test.fsacd.file2=D:/Users/vader/Music/Monomer/Monomer - Labyrinth/Monomer - Labyrinth - 03 Warden.flac
 test.fsacd.path1=/this/is/a/test1
 test.fsacd.path2=/this/is/a/test2
+
+test.mtpcd.id=\\\\?\\usb#vid_4102&pid_1191#ak100_ii#{6ac27878-a6fa-4155-ba85-f98f491d4f33}
+test.mtpcd.desc=AK100_II
+test.mtpcd.manu=IRIVER
+test.mtpcd.fname=AK100_II
+test.mtpcd.lib1=D:/Users/vader/Music
+test.mtpcd.lib2=D:/Users/vader/Music2
+test.mtpcd.child=D:/Users/vader/Music/Future Islands
+test.mtpcd.file1=D:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/04 - Doves.flac
+test.mtpcd.file2=D:/Users/vader/Music/Monomer/Monomer - Labyrinth/Monomer - Labyrinth - 03 Warden.flac
+test.mtpcd.path1=/this/is/a/test1
+test.mtpcd.path2=/this/is/a/test2
 
