added mtp device read

--- a/src/main/cpp/CLibJMTP/CLibJMTP/CLibJMTP.vcxproj
+++ b/src/main/cpp/CLibJMTP/CLibJMTP/CLibJMTP.vcxproj
@@ -119,11 +119,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\src\commonHelpers.cpp" />
     <ClCompile Include="..\..\src\jniHelpers.cpp" />
     <ClCompile Include="..\..\src\mtpHelpers.cpp" />
     <ClCompile Include="..\..\src\org_meltzg_jmlm_device_MTPContentDevice.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\include\commonHelpers.h" />
     <ClInclude Include="..\..\include\jniHelpers.h" />
     <ClInclude Include="..\..\include\mtpHelpers.h" />
     <ClInclude Include="..\..\include\mtpModels.h" />
