--- a/src/main/cpp/CLibJMTP/CLibJMTP/CLibJMTP.vcxproj.filters
+++ b/src/main/cpp/CLibJMTP/CLibJMTP/CLibJMTP.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="..\..\src\jniHelpers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\commonHelpers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\mtpHelpers.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\jniHelpers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\commonHelpers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
