--- a/src/test/resources/test-props.properties
+++ b/src/test/resources/test-props.properties
@@ -21,9 +21,8 @@ test.mtpcd.id=\\\\?\\usb#vid_4102&pid_1191#ak100_ii#{6ac27878-a6fa-4155-ba85-f98
 test.mtpcd.desc=AK100_II
 test.mtpcd.manu=IRIVER
 test.mtpcd.fname=AK100_II
-test.mtpcd.lib1=D:/Users/vader/Music
-test.mtpcd.lib2=D:/Users/vader/Music2
-test.mtpcd.child=D:/Users/vader/Music/Future Islands
+test.mtpcd.lib1=o9301
+test.mtpcd.lib2=o2
 test.mtpcd.file1=D:/Users/vader/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/04 - Doves.flac
 test.mtpcd.file2=D:/Users/vader/Music/Monomer/Monomer - Labyrinth/Monomer - Labyrinth - 03 Warden.flac
 test.mtpcd.path1=/this/is/a/test1
