--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 
     compile group:'net.jthink', name:'jaudiotagger', version:'2.2.5'
+
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.4'
 }
 
 //msbuild {
