fixed tests and starting native work again

--- a/src/test/resources/test-props.properties
+++ b/src/test/resources/test-props.properties
@@ -1,7 +1,7 @@
-test.fsacn.file=/mnt/Data/workspace/testdata/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/04 - Doves.flac
-test.fsacn.dir=/mnt/Data/workspace/testdata/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/
-test.fsacn.invfile=/mnt/Data/workspace/testdata/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/Future Islands - Singles.log
-test.fsacn.nonexist=/mnt/Data/workspace/testdata/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/asdf
+test.fsacn.file=/home/meltzg/workspace/testdata/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/04 - Doves.flac
+test.fsacn.dir=/home/meltzg/workspace/testdata/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/
+test.fsacn.invfile=/home/meltzg/.bashrc
+test.fsacn.nonexist=/home/meltzg/workspace/testdata/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/asdf
 test.fsacn.genre=Indie
 test.fsacn.artist=Future Islands
 test.fsacn.album=Singles
@@ -9,11 +9,11 @@ test.fsacn.title=Doves
 test.fsacn.discnum=1
 test.fsacn.tracknum=4
 
-test.fsacd.lib1=/mnt/Data/workspace/testdata/Music
-test.fsacd.lib2=/mnt/Data/workspace/testdata/Music2
-test.fsacd.child=/mnt/Data/workspace/testdata/Music/Future Islands
-test.fsacd.file1=/mnt/Data/workspace/testdata/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/04 - Doves.flac
-test.fsacd.file2=/mnt/Data/workspace/testdata/Music/Monomer/Monomer - Labyrinth/Monomer - Labyrinth - 03 Warden.flac
+test.fsacd.lib1=/home/meltzg/workspace/testdata/Music
+test.fsacd.lib2=/home/meltzg/workspace/testdata/Music2
+test.fsacd.child=/home/meltzg/workspace/testdata/Music/Future Islands
+test.fsacd.file1=/home/meltzg/workspace/testdata/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/04 - Doves.flac
+test.fsacd.file2=/home/meltzg/workspace/testdata/Music/Monomer/Monomer - Labyrinth/Monomer - Labyrinth - 03 Warden.flac
 test.fsacd.path1=/this/is/a/test1
 test.fsacd.path2=/this/is/a/test2
 
@@ -23,8 +23,8 @@ test.mtpcd.manu=IRIVER
 test.mtpcd.fname=AK100_II
 test.mtpcd.lib1=o9301
 test.mtpcd.lib2=o2
-test.mtpcd.file1=/mnt/Data/workspace/testdata/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/04 - Doves.flac
-test.mtpcd.file2=/mnt/Data/workspace/testdata/Music/Monomer/Monomer - Labyrinth/Monomer - Labyrinth - 03 Warden.flac
+test.mtpcd.file1=/home/meltzg/workspace/testdata/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/04 - Doves.flac
+test.mtpcd.file2=/home/meltzg/workspace/testdata/Music/Monomer/Monomer - Labyrinth/Monomer - Labyrinth - 03 Warden.flac
 test.mtpcd.path1=/this/is/a/test1
 test.mtpcd.path2=/this/is/a/test2
 
