--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,6 @@
  * user guide available at https://docs.gradle.org/4.1/userguide/java_library_plugin.html
  */
 
-//plugins {
-//  id "com.ullink.msbuild" version "2.18"
-//}
-
 // Apply the java-library plugin to add support for Java Library
 apply plugin: 'java-library'
 apply plugin: "jacoco"
@@ -38,21 +34,12 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.4'
 }
 
-//msbuild {
-//    solutionFile = 'src/main/cpp/CLibJMTP/CLibJMTP.sln'
-//    platform='x64'
-//    verbosity = 'detailed'
-//    targets = ['Clean', 'Rebuild']
-//    parameters.OutDir = '../../../../../build/libs/'
-//}
+compileJava {
+    options.compilerArgs += ['-h', file('src/main/cpp/include/')]
+}
 
 test {
     systemProperty 'java.library.path', 'build/libs'
-}
-
-task generateHeader(type:Exec) {
-    workingDir './src/main/cpp/include'
-    commandLine 'cmd', '/c', 'javah', '-jni', '-verbose', '-classpath', '../../java', 'org.meltzg.jmlm.device.MTPContentDevice'
 }
 
 defaultTasks 'clean', 'build', 'jacocoTestReport'
