--- a/src/test/resources/test-props.properties
+++ b/src/test/resources/test-props.properties
@@ -17,10 +17,10 @@ test.fsacd.file2=/home/meltzg/workspace/testdata/Music/Monomer/Monomer - Labyrin
 test.fsacd.path1=/this/is/a/test1
 test.fsacd.path2=/this/is/a/test2
 
-test.mtpcd.id=\\\\?\\usb#vid_4102&pid_1191#ak100_ii#{6ac27878-a6fa-4155-ba85-f98f491d4f33}
+test.mtpcd.id=16642:4497:F2000018D562F2A412B4
 test.mtpcd.desc=AK100_II
 test.mtpcd.manu=IRIVER
-test.mtpcd.fname=AK100_II
+test.mtpcd.fname=
 test.mtpcd.lib1=o9301
 test.mtpcd.lib2=o2
 test.mtpcd.file1=/home/meltzg/workspace/testdata/Music/Future Islands/Future Islands - Singles (2014) [FLAC]/04 - Doves.flac
