--- a/build.gradle
+++ b/build.gradle
@@ -21,17 +21,19 @@ repositories {
 dependencies {
     testImplementation 'junit:junit:4.12'
 
-    compile group: 'net.jthink', name: 'jaudiotagger', version: '2.2.5'
+    compile group: 'net.jthink', name: 'jaudiotagger', version: '2.+'
 
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.4'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.+'
 
     // https://mvnrepository.com/artifact/commons-codec/commons-codec
-    compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.+'
 
     // https://mvnrepository.com/artifact/com.google.guava/guava
     compile group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
 
+    // https://mvnrepository.com/artifact/org.mockito/mockito-core
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.+'
 }
 
 defaultTasks 'clean', 'build', 'jacocoTestReport'
