--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: java
 jdk:
   - openjdk11
 
-script: ./gradlew -i
+script:
+  - ./gradlew check -i
+  - ./gradlew jacocoTestReport
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
