--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 	compile 'commons-codec:commons-codec:1.+'
 	compile 'commons-io:commons-io:2.+'
 	compile 'org.apache.commons:commons-lang3:3.+'
+	compile 'org.controlsfx:controlsfx:9.0.0'
 }
 
 jacocoTestReport {
