--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,9 @@ dependencies {
 	compile 'commons-io:commons-io:2.+'
 	compile 'org.apache.commons:commons-lang3:3.+'
 	compile 'org.controlsfx:controlsfx:9.0.0'
+
+	testCompile 'org.testfx:testfx-core:4.0.15-alpha'
+	testCompile 'org.testfx:testfx-junit:4.0.15-alpha'
 }
 
 jacocoTestReport {
