configure headless tests?

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 
 	testCompile 'org.testfx:testfx-core:4.0.15-alpha'
 	testCompile 'org.testfx:testfx-junit:4.0.15-alpha'
+	testCompile 'org.testfx:openjfx-monocle:jdk-11+26'
 }
 
 jacocoTestReport {
