remove file hash. just use metadata for ID

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ jdk:
   - openjdk11
 
 script:
-  - ./gradlew check -i
-  - ./gradlew jacocoTestReport
+  - ./gradlew check jacocoTestReport
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
