--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
   - _JAVA_OPTIONS="-Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw -Dprism.text=t2k -Dtestfx.setup.timeout=2500"
 
 script:
-  - ./gradlew check jacocoTestReport
+  - ./gradlew check jacocoTestReport -PexcludeTests=**/MTP*
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
